Fix spacing between cards

--- a/packages/torque/src/styles/components/refinance-asset-selector.mobile.scss
+++ b/packages/torque/src/styles/components/refinance-asset-selector.mobile.scss
@@ -31,6 +31,9 @@
     .mb2{
       margin-bottom: 1.4rem;
     }
+    &:last-child{
+      margin-bottom: 45px;
+    }
     /*.logo__image {
         height: 2rem;
         margin: 0.7rem 0;
