--- a/packages/torque/src/styles/components/refinance-asset-selector.scss
+++ b/packages/torque/src/styles/components/refinance-asset-selector.scss
@@ -7,6 +7,9 @@
   .mb-20 {
     margin-bottom: 20px;
   }
+  &:last-child{
+    margin-bottom: 105px;
+  }
   /*.logo__image {
       height: 28px;
       margin: 0.7rem 0;
@@ -131,8 +134,6 @@
     //  margin-right: 0;
     //}
 
-    margin-left: 0;
-    margin-top: 2.5rem;
 
     .refinance-page__main-centeredOverlay {
       position: fixed;
